[package]
name = "ultimate-tic-tac-toe"
version = "0.1.0"
authors = ["row454 <rowanhope5@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.30"
rand = { version = "0.8.5", features = ["small_rng"] }
web-time = "1.1.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-agent = "0.3.0"