[package]
name = "ultimate-tic-tac-toe"
version = "0.2.0"
authors = ["row454 <rowanhope5@gmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_workers = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng"] }

serde = { version = "1.0.208", features = ["derive"] }
wasm-bindgen = "0.2.93"
web-time = "1.1.0"
nohash-hasher = "0.2.0"
wasm-peers = { git = "https://github.com/row454/wasm-peers.git" }
serde_json = "1.0.128"


[dependencies.web-sys]
version = "0.3.70"
features = [
  "Location",
  "Window",
]
